@@ -29,6 +29,8 @@
  * New Composer Sort Order tag (variable %composersort%).
  * Improve the Other Releases list to prioritise and separate releases which match the correct number of tracks
    and your Options / Metadata / Prefered Releases settings for Country and Format.
+ * New %_absolutetracknumber% variable numbering tracks sequentially regardless of disc structure
+   (so you can numbers tracks on multi-disc releases without a disc number)
 
 Version 1.2 - 2013-03-30
  * Picard now requires at least Python 2.6
